# go-tpm-tools

./: .cirrus.yml  .dockerignore  .gitignore  .gitmodules  .goreleaser.yaml  BUILD.bazel  CONTRIBUTING.md  Dockerfile  LICENSE  MODULE.bazel  README.md  RELEASING.md  buf.yaml  cloudbuild.yaml  go.mod  go.sum  go.work  go.work.sum  run_cloudbuild.sh
cel/: BUILD.bazel  canonical_eventlog.go  canonical_eventlog_test.go  cos_tlv.go  cos_tlv_test.go
client/: BUILD.bazel  attest.go  attest_network_test.go  attest_test.go  close.go  eventlog_linux.go  eventlog_other.go  example_test.go  handles.go  handles_test.go  import.go  import_certify_test.go  keys.go  keys_test.go  pcr.go  pcr_direct_test.go  pcr_test.go  quote_test.go  seal_direct_test.go  seal_test.go  session.go  signer.go  signer_test.go  template.go
cmd/: BUILD.bazel  attest.go  attest_svsm.go  attest_test.go  debug.go  decrypt.go  eventlog.go  fake_attestation_server.go  fake_cloudlogging_server.go  fake_metadata.go  fake_oauth2_server.go  flags.go  flush.go  flush_handles.go  flush_handles_test.go  flush_test.go  gen_token.go  gen_token_test.go  go.mod  go.sum  open.go  open_other.go  open_windows.go  provenance.go  provenance_test.go  pubkey.go  read.go  register.go  root.go  seal.go  seal_test.go  svsm_test.go  test_utils.go  token.go  token_test.go  verify.go  verify_pcr.go  verify_sev.go  verify_svsm.go  verify_tdx.go  (+2 more)
cmd/flush_handles/: flush_handles.go  flush_handles_test.go
cmd/get_key/: get_key.go
cmd/gotpm/: main.go
cmd/mock_wsd/: README.md  main.go
cmd/seal/: main.go
cmd/teeserver/: README.md  evidence.go  main.go  serve.go
cmd/testdata/: credentials
cmd/unseal/: main.go
internal/: BUILD.bazel  ccel.go  cert.go  cert_test.go  direct_util.go  load_random_external_key.go  pcrs.go  pcrs_test.go  public.go  quote.go  svsm.go  test_data.go  test_linux.go  test_other.go  test_tpm.go  test_windows.go
internal/models/: token_options.go
internal/test/: BUILD.bazel  load_random_external_key.go  simulate_test.go  test_cert.go  test_data.go  test_other.go  test_tpm.go  test_windows.go
internal/util/: fake_oauth2_server.go  util.go  util_test.go
kcc/: Cargo.toml
kcc/kps_kcc/: Cargo.toml
kcc/src/: error.rs  ffi.rs  lib.rs  types.rs  vault.rs
kcc/wsd_kcc/: Cargo.toml
keymanager/: AGENTS.md  Cargo.toml  README.md  buf.gen.yaml  buf.yaml  gen_keymanager.sh  generate_ffi_headers.sh  go.mod  go.sum  integration_test.sh
keymanager/key_protection_service/: server.go  server_test.go  service.go  service_test.go
keymanager/km_common/: Cargo.toml  build.rs  cbindgen.toml
keymanager/workload_service/: hpke_helper_test.go  integration_test.go  mock_generator.go  proto_enums.go  schemas_test.go  server.go  server_destroy_test.go  server_test.go
launcher/: .gcloudignore  BUILD.bazel  agent.go  agent_test.go  attest.go  attest_test.go  auth.go  cloudbuild.yaml  cloudbuild_debug_only.yaml  container-runner.service  container_runner.go  container_runner_test.go  container_spec.go  container_spec_test.go  entrypoint.sh  errors.go  fixup_oem.sh  go.mod  go.sum  google_roots.go  google_roots_test.go  image.go  image_test.go  impersonate.go  impersonate_test.go  key.json  key2.json  main.go  powerbutton.go  preload.sh  request.json  run_tests.sh  start.go  start_test.go  util.go  util_test.go
launcher/agent/: BUILD.bazel  agent.go  agent_test.go  tdx_quote.b64
launcher/device/: device.go  device_test.go
launcher/image/: 10-workload.conf  acpid.service  bc_cloudbuild.yaml  bc_customize_offline.sh  bc_user-data  bcentrypoint.sh  bcfixup_oem.sh  bcpreload.sh  cloudbuild.yaml  cloudbuild_bc_offline.yaml  cloudbuild_preload_only.yaml  cloudbuild_preload_seal.yaml  cmdline.sh  container-cleanup-udp.sh  container-cleanup.service  container-cleanup.sh  container-runner.service  debug.conf  entrypoint.sh  exit_script.sh  fixup_oem.sh  fluent-bit-cs.conf  hardened.conf  internal-investigator.service  internal-investigator.sh  investigator.go  nvidia-persistenced.service  power  power-button-listener.service  power_button_pressed.sh  preload.sh  system-stats-monitor-cs.json  user-data  user-data.normal  user-data.vgbc  vgentrypoint.sh  vgexperiment.json  vgpreload.sh
launcher/internal/: BUILD.bazel  rest_network_test.go
launcher/launcher/: BUILD.bazel  main.go  main_test.go
launcher/launcherfile/: BUILD.bazel  launcherfile.go
launcher/models/: AttestClients.go  data_writer.go  fake_timer.go  fake_token_writer.go  file_writer_test.go  real_timer_test.go  timer.go  timer_fake.go  token_writer.go
launcher/power-button-listener/: main.go
launcher/proto/: doc.go  service.proto
launcher/registryauth/: BUILD.bazel  auth.go
launcher/service/: fake_attestationverifier.go  fake_attestationverifier_test.go
launcher/signature-discovery/: utils.go
launcher/spec/: BUILD.bazel  launch_policy.go  (+5 more)
server/: BUILD.bazel  activate.go  activate_test.go  attestation.go  certificate_test.go  cos_eventlog_test.go  ecc_utils.go  eventlog.go  eventlog_test.go  example_test.go  grouped_error.go  grouped_error_test.go  import.go  import_certify.go  import_test.go  instance_info.go  kernel_cmdline.go  kernel_cmdline_test.go  key_conversion.go  key_conversion_test.go  policy.go  policy_constants.go  policy_constants_test.go  policy_test.go  verify.go  verify_sev.go  verify_tdx.go  verify_test.go
simulator/: ActivateCredential_fp.h  AlgorithmCap.c  AlgorithmCap_fp.h  AlgorithmTests.c  AlgorithmTests_fp.h  AsymmetricCommands.c  Attest_spt.c  Attest_spt_fp.h  AttestationCommands.c  AuditCommands.c  BUILD.bazel  BaseTypes.h  Bits.c  BnConvert.c  BnConvert_fp.h  BnEccData.c  BnMath.c  BnMath_fp.h  BnMemory.c  BnMemory_fp.h  BnValues.h  Cancel.c  Capabilities.h  CapabilityCommands.c  CertifyCreation_fp.h  Certify_fp.h  ChangeEPS_fp.h  ChangePPS_fp.h  ClearControl_fp.h  Clear_fp.h  Clock.c  ClockCommands.c  ClockRateAdjust_fp.h  ClockSet_fp.h  CommandAttributeData.h  CommandAttributes.h  CommandAudit.c  CommandAudit_fp.h  CommandCodeAttributes.c  CommandCodeAttributes_fp.h  (+282 more)
verifier/: BUILD.bazel  client.go  go.mod  go.sum
(+1057 files in other folders)
