module(
    name = "go-tpm-tools",
    version = "0.0.0",
)

bazel_dep(name = "gazelle", version = "0.45.0", repo_name = "bazel_gazelle")
bazel_dep(name = "grpc", version = "1.74.1", repo_name = "com_github_grpc_grpc")
bazel_dep(name = "protobuf", version = "33.1", repo_name = "com_google_protobuf")
bazel_dep(name = "rules_cc", version = "0.2.14", repo_name = "io_bazel_rules_cc")
bazel_dep(name = "rules_go", version = "0.59.0", repo_name = "io_bazel_rules_go")
bazel_dep(name = "openssl", version = "3.3.1.bcr.9", repo_name = "com_github_openssl_openssl")

go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.25.1")

go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "com_github_google_go_attestation", "com_github_google_go_cmp", "com_github_google_go_configfs_tsm", "com_github_google_go_eventlog", "com_github_google_go_sev_guest", "com_github_google_go_tdx_guest", "com_github_google_go_tpm", "com_github_google_logger", "org_golang_google_protobuf")

go_deps_dev = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps", dev_dependency = True)
