load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "client",
    srcs = [
        "attest.go",
        "close.go",
        "eventlog.go",
        "eventlog_linux.go",
        "eventlog_other.go",
        "handles.go",
        "import.go",
        "import_certify.go",
        "keys.go",
        "pcr.go",
        "session.go",
        "signer.go",
        "template.go",
    ],
    importpath = "github.com/google/go-tpm-tools/client",
    visibility = ["//visibility:public"],
    deps = [
        "//internal",
        "//proto/attest",
        "//proto/tpm",
        "@com_github_google_go_sev_guest//abi",
        "@com_github_google_go_sev_guest//client",
        "@com_github_google_go_tdx_guest//client",
        "@com_github_google_go_tdx_guest//client/linuxabi",
        "@com_github_google_go_tdx_guest//proto/tdx",
        "@com_github_google_go_tpm//legacy/tpm2",
        "@com_github_google_go_tpm//tpm2",
        "@com_github_google_go_tpm//tpm2/transport",
        "@com_github_google_go_tpm//tpmutil",
    ],
)

go_test(
    name = "client_test",
    srcs = [
        "attest_network_test.go",
        "attest_test.go",
        "example_test.go",
        "handles_test.go",
        "import_certify_test.go",
        "keys_test.go",
        "pcr_test.go",
        "quote_test.go",
        "seal_test.go",
        "signer_test.go",
    ],
    embed = [":client"],
    deps = [
        "//internal",
        "//internal/test",
        "//proto/attest",
        "//proto/tpm",
        "//server",
        "//simulator",
        "@com_github_google_go_attestation//attest",
        "@com_github_google_go_sev_guest//testing",
        "@com_github_google_go_sev_guest//testing/client",
        "@com_github_google_go_tdx_guest//testing",
        "@com_github_google_go_tdx_guest//testing/client",
        "@com_github_google_go_tdx_guest//testing/testdata",
        "@com_github_google_go_tpm//legacy/tpm2",
        "@com_github_google_go_tpm//tpm2",
        "@com_github_google_go_tpm//tpm2/transport",
        "@com_github_google_go_tpm//tpmutil",
        "@org_golang_google_protobuf//proto",
    ],
)
