load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "cmd",
    srcs = [
        "attest.go",
        "attest_svsm.go",
        "fake_cloudlogging_server.go",
        "flags.go",
        "flush.go",
        "open.go",
        "open_other.go",
        "open_windows.go",
        "pubkey.go",
        "read.go",
        "register.go",
        "root.go",
        "seal.go",
        "token.go",
        "verify.go",
        "verify_sev.go",
        "verify_svsm.go",
        "verify_tdx.go",
    ],
    importpath = "github.com/google/go-tpm-tools/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//client",
        "//internal",
        "//proto/attest",
        "//proto/tpm",
        "//server",
        "//verifier",
        "//verifier/models",
        "//verifier/util",
        "@com_github_golang_jwt_jwt_v4//:go_default_library",
        "@com_github_golang_protobuf//ptypes/timestamp",
        "@com_github_google_gce_tcb_verifier//extract:go_default_library",
        "@com_github_google_gce_tcb_verifier//proto/endorsement:go_default_library",
        "@com_github_google_gce_tcb_verifier//verify:go_default_library",
        "@com_github_google_gce_tcb_verifier_gcetcbendorsement//:go_default_library",
        "@com_github_google_go_configfs_tsm//configfs/configfsi",
        "@com_github_google_go_configfs_tsm//configfs/linuxtsm",
        "@com_github_google_go_configfs_tsm//report",
        "@com_github_google_go_sev_guest//abi",
        "@com_github_google_go_sev_guest//proto/sevsnp",
        "@com_github_google_go_sev_guest//validate",
        "@com_github_google_go_sev_guest//verify",
        "@com_github_google_go_sev_guest//verify/trust",
        "@com_github_google_go_tdx_guest//abi",
        "@com_github_google_go_tdx_guest//proto/tdx",
        "@com_github_google_go_tdx_guest//validate",
        "@com_github_google_go_tdx_guest//verify",
        "@com_github_google_go_tpm//legacy/tpm2",
        "@com_github_google_go_tpm//tpm2",
        "@com_github_google_go_tpm//tpm2/transport",
        "@com_github_google_go_tpm//tpmutil",
        "@com_github_spf13_cobra//:go_default_library",
        "@com_google_cloud_go_compute_metadata//:go_default_library",
        "@com_google_cloud_go_logging//:go_default_library",
        "@com_google_cloud_go_logging//apiv2/loggingpb:go_default_library",
        "@org_golang_google_api//option:go_default_library",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//credentials/insecure",
        "@org_golang_google_protobuf//encoding/prototext",
        "@org_golang_google_protobuf//proto",
    ],
)

go_test(
    name = "cmd_test",
    srcs = [
        "attest_test.go",
        "flush_test.go",
        "seal_test.go",
        "svsm_test.go",
        "token_test.go",
        "verify_test.go",
    ],
    embed = [":cmd"],
    deps = [
        "//client",
        "//internal/test",
        "//proto/attest",
        "//verifier/util",
        "@com_github_google_gce_tcb_verifier//proto/endorsement:go_default_library",
        "@com_github_google_go_configfs_tsm//configfs/configfsi",
        "@com_github_google_go_configfs_tsm//configfs/faketsm",
        "@com_github_google_go_sev_guest//abi",
        "@com_github_google_go_sev_guest//proto/sevsnp",
        "@com_github_google_go_sev_guest//testing",
        "@com_github_google_go_sev_guest//testing/client",
        "@com_github_google_go_sev_guest//validate",
        "@com_github_google_go_tdx_guest//testing",
        "@com_github_google_go_tdx_guest//testing/client",
        "@com_github_google_go_tdx_guest//testing/testdata",
        "@com_github_google_go_tpm//legacy/tpm2",
        "@com_github_google_go_tpm//tpmutil",
        "@org_golang_google_protobuf//encoding/prototext",
        "@org_golang_google_protobuf//proto",
        "@org_golang_x_oauth2//:go_default_library",
        "@org_golang_x_oauth2//google:go_default_library",
    ],
)
