[package]
name = "kcc"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
once_cell = "1.18"
clear_on_drop = "0.2.5"
uuid = { version = "1.3", features = ["v4"] }
zeroize = "1.8.2"
memmap2 = "0.9.9"
libc = "0.2"
rand = "0.9.2"
hpke = "0.13.0"
bssl-crypto = { path = "../../boringssl/rust/bssl-crypto" }
thiserror = "2.0.18"
