load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "launcher",
    srcs = [
        "container_runner.go",
        "errors.go",
        "util.go",
    ],
    importpath = "github.com/google/go-tpm-tools/launcher",
    visibility = ["//visibility:public"],
    deps = [
        "//cel",
        "//client",
        "//launcher/agent",
        "//launcher/internal/healthmonitoring/nodeproblemdetector",
        "//launcher/internal/logging",
        "//launcher/internal/signaturediscovery",
        "//launcher/launcherfile",
        "//launcher/registryauth",
        "//launcher/spec",
        "//launcher/teeserver",
        "//verifier",
        "//verifier/fake",
        "//verifier/ita",
        "//verifier/util",
        "@com_github_cenkalti_backoff_v4//:go_default_library",
        "@com_github_containerd_containerd//:go_default_library",
        "@com_github_containerd_containerd//cio:go_default_library",
        "@com_github_containerd_containerd//containers:go_default_library",
        "@com_github_containerd_containerd//content:go_default_library",
        "@com_github_containerd_containerd//images:go_default_library",
        "@com_github_containerd_containerd//oci:go_default_library",
        "@com_github_containerd_containerd//remotes:go_default_library",
        "@com_github_golang_jwt_jwt_v4//:go_default_library",
        "@com_github_google_go_tpm//legacy/tpm2",
        "@com_github_opencontainers_image_spec//specs-go/v1:go_default_library",
        "@com_github_opencontainers_runtime_spec//specs-go:go_default_library",
        "@com_google_cloud_go_compute_metadata//:go_default_library",
        "@org_golang_google_api//impersonate:go_default_library",
        "@org_golang_google_api//option:go_default_library",
        "@org_golang_x_oauth2//:go_default_library",
    ],
)

go_test(
    name = "launcher_test",
    srcs = [
        "container_runner_test.go",
        "util_test.go",
    ],
    embed = [":launcher"],
    deps = [
        "//cel",
        "//client",
        "//internal/test",
        "//launcher/agent",
        "//launcher/internal/logging",
        "//launcher/launcherfile",
        "//launcher/spec",
        "//verifier",
        "@com_github_cenkalti_backoff_v4//:go_default_library",
        "@com_github_containerd_containerd//:go_default_library",
        "@com_github_containerd_containerd//defaults:go_default_library",
        "@com_github_containerd_containerd//namespaces:go_default_library",
        "@com_github_containerd_containerd//oci:go_default_library",
        "@com_github_golang_jwt_jwt_v4//:go_default_library",
        "@com_github_google_go_cmp//cmp",
        "@com_github_opencontainers_go_digest//:go_default_library",
        "@com_github_opencontainers_image_spec//specs-go/v1:go_default_library",
        "@com_github_opencontainers_runtime_spec//specs-go:go_default_library",
        "@org_golang_google_api//option:go_default_library",
        "@org_golang_x_oauth2//:go_default_library",
    ],
)
