load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "server",
    srcs = [
        "ecc_utils.go",
        "eventlog.go",
        "grouped_error.go",
        "import.go",
        "import_certify.go",
        "instance_info.go",
        "key_conversion.go",
        "policy.go",
        "policy_constants.go",
        "verify.go",
    ],
    embedsrcs = [
        "ca-certs/gcp_ek_ak_ca_intermediate_v3.crt",
        "ca-certs/gcp_ek_ak_ca_root.crt",
        "ca-certs/tpm_ek_intermediate_2.crt",
        "ca-certs/tpm_ek_intermediate_3.crt",
        "ca-certs/tpm_ek_root_1.cer",
        "secure-boot/GcePk.crt",
        "secure-boot/MicCorKEKCA2011_2011-06-24.crt",
        "secure-boot/MicCorUEFCA2011_2011-06-27.crt",
        "secure-boot/MicWinProPCA2011_2011-10-19.crt",
        "secure-boot/canonical-boothole.crt",
        "secure-boot/cisco-boothole.crt",
        "secure-boot/debian-boothole.crt",
    ],
    importpath = "github.com/google/go-tpm-tools/server",
    visibility = ["//visibility:public"],
    deps = [
        "//cel",
        "//client",
        "//internal",
        "//proto/attest",
        "//proto/tpm",
        "@com_github_google_go_attestation//attest",
        "@com_github_google_go_eventlog//register",
        "@com_github_google_go_sev_guest//verify/trust",
        "@com_github_google_go_tpm//legacy/tpm2",
        "@com_github_google_go_tpm//tpm2",
        "@com_github_google_go_tpm//tpmutil",
        "@org_golang_google_protobuf//proto",
    ],
)

go_test(
    name = "server_test",
    srcs = [
        "certificate_test.go",
        "eventlog_test.go",
        "example_test.go",
        "grouped_error_test.go",
        "import_test.go",
        "key_conversion_test.go",
        "policy_constants_test.go",
        "policy_test.go",
        "verify_test.go",
    ],
    embed = [":server"],
    deps = [
        "//cel",
        "//client",
        "//internal",
        "//internal/test",
        "//proto/attest",
        "//proto/tpm",
        "//simulator",
        "@com_github_google_go_cmp//cmp",
        "@com_github_google_go_configfs_tsm//configfs/fakertmr",
        "@com_github_google_go_configfs_tsm//rtmr",
        "@com_github_google_go_eventlog//proto/state",
        "@com_github_google_go_eventlog//register",
        "@com_github_google_go_tpm//legacy/tpm2",
        "@com_github_google_go_tpm//tpmutil",
        "@com_github_google_logger//:logger",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//testing/protocmp",
    ],
)
