load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "registryauth",
    srcs = ["auth.go"],
    importpath = "github.com/google/go-tpm-tools/launcher/registryauth",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_containerd_containerd//remotes:go_default_library",
        "@com_github_containerd_containerd//remotes/docker:go_default_library",
        "@com_google_cloud_go_compute_metadata//:go_default_library",
        "@org_golang_x_oauth2//:go_default_library",
    ],
)
