load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "teeserver",
    srcs = ["tee_server.go"],
    importpath = "github.com/google/go-tpm-tools/launcher/teeserver",
    visibility = ["//visibility:public"],
    deps = [
        "//launcher/agent",
        "//launcher/internal/logging",
        "//launcher/spec",
        "//verifier",
        "//verifier/models",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
    ],
)

go_test(
    name = "teeserver_test",
    srcs = ["tee_server_test.go"],
    embed = [":teeserver"],
    deps = [
        "//cel",
        "//launcher/agent",
        "//launcher/internal/logging",
        "//verifier",
        "//verifier/models",
        "@com_github_google_go_cmp//cmp",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
    ],
)
