load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "tpm",
    srcs = ["tpm.pb.go"],
    importpath = "github.com/google/go-tpm-tools/proto/tpm",
    visibility = ["//visibility:public"],
    deps = [
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
    ],
)
