load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "ita",
    srcs = [
        "client.go",
        "evidence.go",
    ],
    importpath = "github.com/google/go-tpm-tools/verifier/ita",
    visibility = ["//visibility:public"],
    deps = ["//verifier"],
)

go_test(
    name = "ita_test",
    srcs = ["client_test.go"],
    embed = [":ita"],
    deps = [
        "//verifier",
        "//verifier/models",
        "@com_github_google_go_cmp//cmp",
    ],
)
